更新版本至1.3.2，优化UI交互体验，确保文件类型识别与分类一致。

--- a/app/renderer/index.html
+++ b/app/renderer/index.html
@@ -19,7 +19,7 @@
                     </span>
                     脚本管理器
                 </h1>
-                <span class="version-info">v1.3.1</span>
+                <span class="version-info">v1.3.2</span>
             </div>
 
             <div class="header-center">
@@ -78,6 +78,15 @@
                     JavaScript
                     <span class="tab-count" id="count-javascript">0</span>
                 </button>
+                <button class="category-tab" data-category="typescript">
+                    <span class="tab-icon">
+                        <svg class="icon-svg" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
+                            <path fill="#059669" d="M0 16v16h32V0H0zm25.786-1.276a4 4 0 0 1 2.005 1.156c.292.312.729.885.766 1.026c.01.042-1.38.974-2.224 1.495c-.031.021-.156-.109-.292-.313c-.411-.599-.844-.859-1.505-.906c-.969-.063-1.594.443-1.589 1.292a1.26 1.26 0 0 0 .135.599c.214.443.615.708 1.854 1.245c2.292.984 3.271 1.635 3.88 2.557c.682 1.031.833 2.677.375 3.906c-.51 1.328-1.771 2.234-3.542 2.531c-.547.099-1.849.083-2.438-.026c-1.286-.229-2.505-.865-3.255-1.698c-.297-.323-.87-1.172-.833-1.229c.016-.021.146-.104.292-.188l1.188-.688l.922-.536l.193.286c.271.411.859.974 1.214 1.161c1.021.542 2.422.464 3.115-.156c.281-.234.438-.594.417-.958c0-.37-.047-.536-.24-.813c-.25-.354-.755-.656-2.198-1.281c-1.651-.714-2.365-1.151-3.01-1.854a4.2 4.2 0 0 1-.88-1.599c-.12-.453-.151-1.589-.057-2.042c.339-1.599 1.547-2.708 3.281-3.036c.563-.109 1.875-.068 2.427.068zm-7.51 1.339l.01 1.307h-4.167v11.839h-2.948V17.37H7.01v-1.281c0-.714.016-1.307.036-1.323c.016-.021 2.547-.031 5.62-.026l5.594.016z"/>
+                        </svg>
+                    </span>
+                    TypeScript
+                    <span class="tab-count" id="count-typescript">0</span>
+                </button>
                 <button class="category-tab" data-category="batch">
                     <span class="tab-icon">
                         <svg class="icon-svg" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
@@ -89,6 +98,28 @@
                     </span>
                     批处理
                     <span class="tab-count" id="count-batch">0</span>
+                </button>
+                <button class="category-tab" data-category="powershell">
+                    <span class="tab-icon">
+                        <svg class="icon-svg" viewBox="0 0 1025 1024" xmlns="http://www.w3.org/2000/svg">
+                            <path fill="#0284c7" d="M896.428 1024h-768q-53 0-90.5-37.5T.428 896V128q0-53 37.5-90.5t90.5-37.5h768q53 0 90.5 37.5t37.5 90.5v768q0 53-37.5 90.5t-90.5 37.5m-406-562l-187-188q-19-20-46.5-20t-47 19.5t-19.5 47t20 46.5l141 143l-141 142q-20 20-20 47.5t19.5 46.5t47 19t46.5-19l187-188q18-17 19-42t-14-44q2-3-5-10m278 177h-192q-26 0-45 19t-19 45.5t19 45.5t45 19h192q27 0 45.5-19t18.5-45.5t-18.5-45.5t-45.5-19"/>
+                        </svg>
+                    </span>
+                    PowerShell
+                    <span class="tab-count" id="count-powershell">0</span>
+                </button>
+                <button class="category-tab" data-category="bash">
+                    <span class="tab-icon">
+                        <svg class="icon-svg" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
+                            <g fill="none" stroke="#a6da95" stroke-linecap="round" stroke-linejoin="round">
+                                <path d="M2 15.5c-.7 0-1.5-.8-1.5-1.5V5c0-.7.8-1.5 1.5-1.5h9c.7 0 1.5.8 1.5 1.5v9c0 .7-.8 1.5-1.5 1.5z"/>
+                                <path d="m1.2 3.8l3.04-2.5S5.17.5 5.7.5h8.4c.66 0 1.4.73 1.4 1.4v7.73a2.7 2.7 0 0 1-.7 1.75l-2.68 3.51"/>
+                                <path d="M6 8.75c0-.69-.54-1.25-1.2-1.25h-.6c-.66 0-1.2.56-1.2 1.25S3.54 10 4.2 10h.6c.66 0 1.2.56 1.2 1.25s-.54 1.25-1.2 1.25h-.6c-.66 0-1.2-.56-1.2-1.25M4.5 6.5v1m0 5v1"/>
+                            </g>
+                        </svg>
+                    </span>
+                    Bash
+                    <span class="tab-count" id="count-bash">0</span>
                 </button>
                 <button class="category-tab" data-category="other">
                     <span class="tab-icon">
