--- a/app/renderer/index.html
+++ b/app/renderer/index.html
@@ -19,7 +19,7 @@
                     </span>
                     脚本管理器
                 </h1>
-                <span class="version-info">v1.3.5</span>
+                <span class="version-info">v1.3.7</span>
             </div>
 
             <div class="header-center">
@@ -225,6 +225,10 @@
         <div class="context-menu-item" id="context-copy">
             <span class="menu-icon">📋</span>
             复制路径
+        </div>
+        <div class="context-menu-item" id="context-open-folder">
+            <span class="menu-icon">📁</span>
+            打开文件夹
         </div>
         <div class="context-menu-divider"></div>
         <div class="context-menu-item danger" id="context-delete">
