批处理类型改为Batch

--- a/app/renderer/index.html
+++ b/app/renderer/index.html
@@ -96,7 +96,7 @@
                             </g>
                         </svg>
                     </span>
-                    批处理
+                    Batch
                     <span class="tab-count" id="count-batch">0</span>
                 </button>
                 <button class="category-tab" data-category="powershell">
