feat: 新增心跳监控和通知系统
- 新增HeartbeatMonitor心跳监控器，支持定期检查系统健康状态
- 新增NotificationManager通知管理器，支持系统通知和托盘通知
- 新增测试控制台界面，支持心跳监控功能测试
- 修复脚本文件丢失检测和通知分类问题
- 优化心跳检查逻辑，传递具体问题详情而非通用错误
- 支持调度器异常、脚本文件丢失、Python环境异常等问题的自动检测和恢复
- 完善通知系统，支持不同类型问题的精确分类和通知

--- a/app/renderer/index.html
+++ b/app/renderer/index.html
@@ -43,6 +43,9 @@
                 <button class="btn btn-secondary" id="settings-btn" title="设置">
                     <span class="btn-icon">⚙️</span>
                 </button>
+                <button class="btn btn-secondary" id="test-console-btn" title="测试控制台" style="display: none;">
+                    <span class="btn-icon">🔍</span>
+                </button>
             </div>
         </header>
 
